removed jdk 11 method